// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiParameterChart matches snapshot with empty data 1`] = `
<div
  class="card p-2 sm:p-6 "
>
  <h3
    class="text-base sm:text-lg font-semibold text-gray-900 dark:text-white mb-2 sm:mb-4 flex items-center"
  >
    <svg
      class="w-5 h-5 mr-2 text-blue-500 dark:text-blue-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Hourly Weather Parameters
  </h3>
  <div
    class="rounded-xl p-1 sm:p-4 relative bg-gradient-to-br from-white via-gray-50 to-white border border-gray-200 shadow-lg backdrop-blur-sm"
    style="min-height: 400px; height: 400px;"
  >
    <div
      data-testid="responsive-container"
    >
      <div
        data-testid="line-chart"
      >
        <div
          data-testid="cartesian-grid"
        >
          CartesianGrid
        </div>
        <div
          data-testid="x-axis"
        >
          XAxis
        </div>
        <div
          data-testid="y-axis"
        >
          YAxis
        </div>
        <div
          data-testid="legend"
        >
          Legend
        </div>
        <div
          data-testid="line-Temperature"
        >
          Temperature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiParameterChart matches snapshot with one parameter 1`] = `
<div
  class="card p-2 sm:p-6 "
>
  <h3
    class="text-base sm:text-lg font-semibold text-gray-900 dark:text-white mb-2 sm:mb-4 flex items-center"
  >
    <svg
      class="w-5 h-5 mr-2 text-blue-500 dark:text-blue-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Hourly Weather Parameters
  </h3>
  <div
    class="rounded-xl p-1 sm:p-4 relative bg-gradient-to-br from-white via-gray-50 to-white border border-gray-200 shadow-lg backdrop-blur-sm"
    style="min-height: 400px; height: 400px;"
  >
    <div
      data-testid="responsive-container"
    >
      <div
        data-testid="line-chart"
      >
        <div
          data-testid="cartesian-grid"
        >
          CartesianGrid
        </div>
        <div
          data-testid="x-axis"
        >
          XAxis
        </div>
        <div
          data-testid="y-axis"
        >
          YAxis
        </div>
        <div
          data-testid="legend"
        >
          Legend
        </div>
        <div
          data-testid="line-Temperature"
        >
          Temperature
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiParameterChart matches snapshot with two parameters 1`] = `
<div
  class="card p-2 sm:p-6 "
>
  <h3
    class="text-base sm:text-lg font-semibold text-gray-900 dark:text-white mb-2 sm:mb-4 flex items-center"
  >
    <svg
      class="w-5 h-5 mr-2 text-blue-500 dark:text-blue-400"
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      />
    </svg>
    Hourly Weather Parameters
  </h3>
  <div
    class="rounded-xl p-1 sm:p-4 relative bg-gradient-to-br from-white via-gray-50 to-white border border-gray-200 shadow-lg backdrop-blur-sm"
    style="min-height: 400px; height: 400px;"
  >
    <div
      data-testid="responsive-container"
    >
      <div
        data-testid="line-chart"
      >
        <div
          data-testid="cartesian-grid"
        >
          CartesianGrid
        </div>
        <div
          data-testid="x-axis"
        >
          XAxis
        </div>
        <div
          data-testid="y-axis"
        >
          YAxis
        </div>
        <div
          data-testid="y-axis"
        >
          YAxis
        </div>
        <div
          data-testid="legend"
        >
          Legend
        </div>
        <div
          data-testid="line-Temperature"
        >
          Temperature
        </div>
        <div
          data-testid="line-Wind Speed (10m)"
        >
          Wind Speed (10m)
        </div>
      </div>
    </div>
  </div>
</div>
`;
